feat: implementa atividade 05 - dominio e encapsulamento